fix(pagination): ajout module contrast

--- a/src/component/pagination/style/_contrast.scss
+++ b/src/component/pagination/style/_contrast.scss
@@ -4,9 +4,10 @@
 ////
 
 @use 'module/color';
+@use 'module/contrast';
 
 @mixin _pagination-contrast($legacy: false) {
-  @media (forced-colors: active) {
+  @include contrast.selector() {
     #{ns(pagination)} {
       &__link {
         &[aria-current] {
